add author name

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IPE midterm</title>
+    
 </head>
 <body>
     <h1>Welcome to IPE-2024</h1>
+    <p>Auhor of the page is Nann Koungkea</p>
 </body>
 </html>
