--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Welcome to IPE-2024</h1>
     <p>Auhor of the page is Nann Koungkea</p>
+    <p>I'm the author</p>
 </body>
 </html>
