--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Welcome to IPE-2024</h1>
     <p>Auhor of the page is Nann Koungkea</p>
     <p>I'm the author</p>
+    <p>latest changes</p>
 </body>
 </html>
